// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ToggleTag ToggleTag medium matches snapshot (desktop clickable) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-3x);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-1x);
  padding-left: var(--spacing-1halfx);
  padding-right: var(--spacing-1halfx);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag medium matches snapshot (desktop with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-3x);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-1x);
  padding-left: var(--spacing-1halfx);
  padding-right: var(--spacing-1halfx);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c3 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3:hover {
  color: #000000;
}

.c2 {
  color: #1B1C1E;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="12"
    icon-name="home"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag medium matches snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-3x);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-1x);
  padding-left: var(--spacing-1halfx);
  padding-right: var(--spacing-1halfx);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag medium matches snapshot (desktop) 2`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-3x);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-1x);
  padding-left: var(--spacing-1halfx);
  padding-right: var(--spacing-1halfx);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.875rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag medium matches snapshot (mobile clickable) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-3x);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-1x);
  padding-left: var(--spacing-1halfx);
  padding-right: var(--spacing-1halfx);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag medium matches snapshot (mobile with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-3x);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-1x);
  padding-left: var(--spacing-1halfx);
  padding-right: var(--spacing-1halfx);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c3 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3:hover {
  color: #000000;
}

.c2 {
  color: #1B1C1E;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="12"
    icon-name="home"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag medium matches snapshot (mobile) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-3x);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-1x);
  padding-left: var(--spacing-1halfx);
  padding-right: var(--spacing-1halfx);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag medium matches snapshot (mobile) 2`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-3x);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-1x);
  padding-left: var(--spacing-1halfx);
  padding-right: var(--spacing-1halfx);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.875rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag small matches snapshot (desktop clickable) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-2halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-half);
  padding-left: var(--spacing-1x);
  padding-right: var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag small matches snapshot (desktop with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-2halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-half);
  padding-left: var(--spacing-1x);
  padding-right: var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c3 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3:hover {
  color: #000000;
}

.c2 {
  color: #1B1C1E;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="12"
    icon-name="home"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag small matches snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-2halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-half);
  padding-left: var(--spacing-1x);
  padding-right: var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag small matches snapshot (desktop) 2`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-2halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-1x);
  padding-left: var(--spacing-1x);
  padding-right: var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag small matches snapshot (mobile clickable) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-2halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-half);
  padding-left: var(--spacing-1x);
  padding-right: var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag small matches snapshot (mobile with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-2halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-half);
  padding-left: var(--spacing-1x);
  padding-right: var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c3 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3:hover {
  color: #000000;
}

.c2 {
  color: #1B1C1E;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="12"
    icon-name="home"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag small matches snapshot (mobile) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-2halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-half);
  padding-left: var(--spacing-1x);
  padding-right: var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`ToggleTag ToggleTag small matches snapshot (mobile) 2`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-2halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  font-weight: 400;
  padding: 0 var(--spacing-1x);
  padding-left: var(--spacing-1x);
  padding-right: var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #000000;
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover {
  color: #000000;
}

<button
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;
